# CaseTrace

./: .gitignore  README.md  integrity.py  pyproject.toml
acquisition/: README.md  adb.py  evidence.py  extract_case.py  io.py  logging.py  test_extract_case.py
android/: README.md  build.gradle  gradle.properties  settings.gradle
backend/: README.md  __init__.py  app.py  engine.py  main.py  models.py  settings.py
docs/: architecture.md  parser-schema-spec.md  phase10-validation.md  phase5-entity-graph.md  phase7-search.md  phase8-integrity.md  phase9-investigator-ui.md  phase9-screenshots.md  synthetic-evidence-rules.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
parser/: __init__.py  common.py  ground_truth.py  models.py  parse_app_events.py  parse_browser.py  parse_calls.py  parse_deleted_sqlite.py  parse_locations.py  parse_messages.py  parse_photos.py  pipeline.py  search_index.py  sqlite_utils.py  wal_recovery.py
schemas/: artifact-record.schema.json  case-metadata.schema.json  expected-metrics.schema.json  ground-truth-dataset.schema.json  hash-manifest.schema.json  processing-log.schema.json
tests/: test_backend_integrity.py  test_entity_graph.py  test_integrity.py  test_parser_helpers.py  test_parsers.py  test_phase9_report.py  test_pipeline.py  test_search_api.py  test_timeline_cli.py  test_validation_phase0_helpers.py  test_validation_report.py  test_wal_recovery.py
tools/: __init__.py  build_graph.py  entity_graph_builder.py  generate_seed_artifacts.py  parse_case.py  (+5 more)
(+69 files in other folders)
