[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casetrace"
version = "0.1.0"
description = "CaseTrace - Synthetic Android Evidence Analysis Lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "networkx>=3.1,<4",
    "pyvis>=0.3.0,<0.4",
    "fastapi>=0.110,<1",
    "Pillow>=12.1,<13",
    "uvicorn>=0.24,<1",
    "requests>=2.31,<3",
    "jinja2>=3.1,<4",
    "weasyprint>=60.0,<70",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.26,<5",
    "httpx>=0.28,<0.30",
]

[tool.setuptools]
py-modules = ["integrity"]

[tool.setuptools.packages.find]
include = [
    "backend",
    "backend.*",
    "parser",
    "parser.*",
    "tools",
    "tools.*",
]
